sdarq/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${DEPLOYMENT}
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      service: ${SERVICE}
  template:
    metadata:
      labels:
        service: ${SERVICE}
    spec:
      serviceAccountName: ${SERVICE_ACCOUNT}
      runtimeClassName: gvisor
      nodeSelector:
        cloud.google.com/gke-nodepool: apps

      containers:
      - name: frontend
        image: ${SDARQ_FRONTEND_IMAGE}
        ports:
        - name: ${FRONTEND_PORT}
          containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: ${FRONTEND_PORT}
          timeoutSeconds: 10
        resources:
          requests:
            memory: 75M

      - name: backend
        image: ${SDARQ_BACKEND_IMAGE}
        ports:
        - name: ${BACKEND_PORT}
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health/
            port: ${BACKEND_PORT}
          timeoutSeconds: 10
        resources:
          requests:
            memory: 75M
