sdarq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${INGRESS}
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ${IP_NAME}
    networking.gke.io/managed-certificates: ${MANAGED_CERT}
    networking.gke.io/v1beta1.FrontendConfig: ${FRONTEND_CONFIG}
spec:
  rules:
  - host: ${DNS_HOSTNAME}
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: ${SERVICE}
            port:
              name: ${FRONTEND_PORT}
      - path: /submit/
        pathType: Prefix
        backend:
          service:
            name: ${SERVICE}
            port:
              name: ${BACKEND_PORT}
      - path: /cis_scan/
        pathType: Prefix
        backend:
          service:
            name: ${SERVICE}
            port:
              name: ${BACKEND_PORT}
      - path: /cis_results/
        pathType: Prefix
        backend:
          service:
            name: ${SERVICE}
            port:
              name: ${BACKEND_PORT}
      - path: /request_tm/
        pathType: Prefix
        backend:
          service:
            name: ${SERVICE}
            port:
              name: ${BACKEND_PORT}
      - path: /zap_scan/
        pathType: Prefix
        backend:
          service:
            name: ${SERVICE}
            port:
              name: ${BACKEND_PORT}
---
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE}
  namespace: ${NAMESPACE}
  annotations:
    cloud.google.com/neg: |
      {
        "ingress": true
      }
    cloud.google.com/backend-config: |
      {
        "ports": {
          "${FRONTEND_PORT}": "${BACKEND_CONFIG}",
          "${BACKEND_PORT}": "${BACKEND_CONFIG}"
        }
      }
spec:
  type: NodePort
  selector:
    service: ${SERVICE}
  ports:
  - name: ${FRONTEND_PORT}
    port: 80
    targetPort: ${FRONTEND_PORT}
  - name: ${BACKEND_PORT}
    port: 8080
    targetPort: ${BACKEND_PORT}
